# transfer-interference

./: .gitignore  COGS-202-notes.md  README.md  pyproject.toml
data/: cogs202_results.csv  cogs202_results_participants.csv
notebooks/: figure2_transfer_interference.ipynb  figure3_anns.ipynb  figure4_individual_differences.ipynb
scripts/: 01_preprocess_data.py  02_run_simulations.py  03_fit_vonmises.py  04_sweep_cogs202.py  05_plot_cogs202.py
src/analysis/: ann.py  preprocessing.py
src/models/: ann_experiments.json  neural_network.py
src/utils/: basic_funcs.py  figure_utils.py
