[project]
name = "transfer-interference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "setuptools==75.1.0",
    "torch==2.4.0",
    "tqdm>=4.67.3",
]
